--- a/Journal/Pathfinder World Tracker/package.json
+++ b/Journal/Pathfinder World Tracker/package.json
@@ -8,7 +8,11 @@
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --verbose",
     "test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --watch",
     "test:coverage": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --coverage",
-    "test:debug": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --verbose --detectOpenHandles"
+    "test:debug": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --verbose --detectOpenHandles",
+    "build:css": "sass --style=compressed --no-source-map styles/main.scss dist/css/main.min.css",
+    "watch:css": "sass --watch --style=compressed --no-source-map styles/main.scss:dist/css/main.min.css",
+    "build": "npm run build:css",
+    "dev": "npm run watch:css"
   },
   "dependencies": {
     "bootstrap": "^5.3.0"
@@ -19,6 +23,7 @@
     "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0"
+    "jest-environment-jsdom": "^29.7.0",
+    "sass": "^1.89.1"
   }
-} 
+}
